# cloudstorage2bq

./: README.md  pyproject.toml
src/cloudstorage2bq/: __main__.py
